--- a/apps/site/components/Common/Searchbox/SlidingChatPanel/index.module.css
+++ b/apps/site/components/Common/Searchbox/SlidingChatPanel/index.module.css
@@ -52,44 +52,6 @@
     py-6;
 }
 
-.chatInteractionsContainer {
-  @apply relative
-    mb-6
-    h-full
-    flex-1
-    items-start
-    overflow-y-auto
-    px-4;
-}
-
-.chatInteractionsWrapper {
-  @apply flex
-    w-full
-    flex-wrap
-    gap-6;
-
-  > div {
-    @apply w-full;
-  }
-}
-
-.chatInteractionsWrapper::-webkit-scrollbar {
-  width: 4px;
-}
-
-.chatInteractionsWrapper::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.chatInteractionsWrapper::-webkit-scrollbar-thumb {
-  background: rgb(255 255 255 / 20%);
-  border-radius: 2px;
-}
-
-.chatInteractionsWrapper::-webkit-scrollbar-thumb:hover {
-  background: rgb(255 255 255 / 30%);
-}
-
 .slidingPanelBottom {
   @apply relative;
 }
